# rust-cv-native

./: .gitignore  API_AUDIT_CHECKLIST.md  API_AUDIT_INDEX.md  API_CONSISTENCY_AUDIT.md  API_CONSISTENCY_SUMMARY.md  API_FIXES_DETAILED.md  ARCHITECTURE_PLAN.md  AUDIT_AFFECTED_FUNCTIONS.md  AUDIT_COMPLETION_SUMMARY.md  AUDIT_DELIVERY_SUMMARY.txt  CHANGELOG.md  COMMIT_MESSAGE.txt  COMPREHENSIVE_DOCUMENTATION_SUMMARY.md  CRATE_HIERARCHY.md  CRITICAL_FIXES_REPORT.md  Cargo.toml  DOCUMENTATION_AUDIT.md  ERROR_HANDLING_AUDIT_INDEX.md  ERROR_HANDLING_AUDIT_REPORT.md  ERROR_HANDLING_IMPLEMENTATION_GUIDE.md  ERROR_HANDLING_QUICK_REFERENCE.md  ERROR_HANDLING_SUMMARY.md  ERROR_STANDARDIZATION_EXECUTIVE_SUMMARY.md  FIXES_SUMMARY.md  FROZEN_ARCHITECTURES.md  GPU_ACCELERATION.md  OPEN3D_EXTENDED.md  OPEN3D_IMPLEMENTATION.md  OPEN3D_STATUS.md  PHASE2_VERIFICATION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  START_HERE_ERROR_AUDIT.md  STUB_FUNCTIONS_FIX_DETAILS.md  fix_commits.py  name-callback.py  pyproject.toml  update_deps.py
3d/: Cargo.toml
3d/src/: lib.rs  pointcloud.rs  registration.rs  visibility.rs
3d/src/async_ops/: mod.rs
3d/src/batch/: mod.rs
3d/src/gaussian_splatting/: io.rs  optimize.rs  rasterize.rs  types.rs
3d/src/gpu/: mod.rs
3d/src/mesh/: mod.rs  processing.rs  reconstruction.rs
3d/src/odometry/: mod.rs
3d/src/pose_graph/: mod.rs  visualizer.rs
3d/src/raycasting/: mod.rs
3d/src/registration/: colored.rs  global.rs  gnc.rs  mod.rs
3d/src/spatial/: mod.rs
3d/src/tsdf/: mod.rs
3d/tests/: functional_tests.rs  multi_gpu_tests.rs
calib3d/: Cargo.toml
calib3d/src/: calibration.rs  chessboard.rs  distortion.rs  essential_fundamental.rs  lib.rs  pattern.rs  pnp.rs  project.rs  stereo.rs  triangulation.rs
calib3d/test_data/calibration/: expected_results.json
calib3d/tests/: functional_tests.rs  refinement_tests.rs
core/: Cargo.toml
core/src/: descriptor.rs  float.rs  frames.rs  geometry.rs  image.rs  kalman.rs  keypoint.rs  lib.rs  nalgebra_adapters.rs  nalgebra_wrapper.rs  point_cloud.rs  robust.rs  runtime.rs  slam.rs  storage.rs  tensor.rs  vector.rs
core/tests/: camera_tests.rs  integration_storage.rs  point_cloud_tests.rs
crates/3d/: Cargo.toml
crates/3d/src/: filters.rs  hidden_point_removal.rs  lib.rs  normals.rs  visibility.rs
crates/3d/tests/: functional_tests.rs  perf_optimizations_tests.rs
crates/calib3d/: Cargo.toml
crates/calib3d/src/: calibration.rs  lib.rs  (+9 more)
crates/examples/: Cargo.toml  fast_detection_all_types.rs  normals_example.py  plot_3d.html
crates/io/: Cargo.toml
crates/point-cloud/: Cargo.toml
crates/python/: Cargo.toml
crates/runtime/: Cargo.toml
crates/slam/: Cargo.toml
dnn/: Cargo.toml
dnn/src/: blob.rs  lib.rs
examples/: Cargo.toml  benchmark_vs_open3d.py  fast_detection_all_types.rs  geometry_demo.py  python_demo.py
examples/src/: bundle_adjustment.rs  core_types.rs  gaussian_splatting_basic.rs  imgproc_demo.rs  kalman_filter.rs  orb_benchmark.rs  plot_demo.rs  raycasting.rs  registration_icp.rs  scientific.rs  visualization_utils.rs
features/: Cargo.toml
features/examples/: matching_demo.rs
features/src/: akaze.rs  aruco.rs  brief.rs  descriptor.rs  fast.rs  flann.rs  gftt.rs  harris.rs  hog.rs  lbd.rs  lib.rs  line_matcher.rs  markers.rs  matcher.rs  orb.rs  ransac.rs  sift.rs
features/tests/: functional_tests.rs  gpu_feature_detection.rs
hal/: Cargo.toml
hal/shaders/: akaze_diffusion.wgsl  bilateral.wgsl  bilateral_f32.wgsl  color_cvt.wgsl  color_cvt_f32.wgsl  convolve_2d.wgsl  fast.wgsl  fast_bf16.wgsl  fast_nms.wgsl  fast_nms_f16.wgsl  fast_nms_f32.wgsl  hough.wgsl  icp_accumulate.wgsl  icp_correspondence.wgsl  lucas_kanade.wgsl  marching_cubes.wgsl  mog2_update.wgsl  morphology.wgsl  nms.wgsl  pointcloud_transform.wgsl  resize.wgsl  sift_extrema.wgsl  sift_orientation.wgsl  stereo_match.wgsl  subtract.wgsl  threshold.wgsl  threshold_bf16.wgsl  threshold_f32.wgsl  tsdf_raycast.wgsl  warp.wgsl
hal/src/: backend.rs  batch.rs  compute.rs  context.rs  cpu.rs  device.rs  gpu.rs  gpu_sparse.rs  gpu_storage.rs  gpu_utils.rs  image.rs  lib.rs  memory.rs  mlx.rs  queue.rs  storage.rs  tensor_ext.rs
hal/tests/: cpu_precision_tests.rs  spatial_perception_tests.rs
imgproc/: Cargo.toml
imgproc/src/: bilateral.rs  color.rs  connected_components.rs  contours.rs  convolve.rs  distance_transform.rs  edges.rs  geometry.rs  histogram.rs  hough.rs  lib.rs  local_threshold.rs  morph.rs  morphology_advanced.rs  resize.rs  segmentation.rs  stitching.rs  template_matching.rs  threshold.rs
imgproc/tests/: functional_tests.rs  threading_integration.rs
io/: Cargo.toml
io/src/: lib.rs  mesh.rs  obj.rs  pcd.rs  ply.rs  stl.rs
plot/: Cargo.toml
plot/src/: chart.rs  export.rs  lib.rs  three_d.rs
point-cloud/: Cargo.toml
point-cloud/src/: hidden_point_removal.rs  lib.rs
point-cloud/tests/: integration_test.rs
python/: Cargo.toml  build.rs
python/cv_native/: __init__.py
python/src/: lib.rs
registration/: Cargo.toml
registration/src/: lib.rs
rendering/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: device_registry.rs  distributed.rs  error.rs  executor.rs  lib.rs  memory.rs  memory_manager.rs  orchestrator.rs  pipeline.rs
runtime/tests/: stress_tests.rs
scientific/: Cargo.toml
scientific/src/: fft.rs  geometry.rs  geometry2d.rs  integrate.rs  interpolate.rs  jit.rs  lib.rs  linalg.rs  matching.rs  multiview.rs  optimize.rs  point_cloud.rs  signal.rs  spatial.rs  special.rs  stats.rs
scientific/tests/: functional_tests.rs
slam/: Cargo.toml
slam/src/: kalman.rs  lib.rs  mapping.rs  pose_graph.rs  tracking.rs
slam/tests/: integration_tests.rs
stereo/: Cargo.toml
stereo/benches/: calibration_benchmark.rs
stereo/src/: block_matching.rs  calib3d.rs  depth.rs  gpu.rs  lib.rs  parallel.rs  rectification.rs  sgm.rs
stereo/tests/: functional_tests.rs
video/: Cargo.toml
video/src/: kalman.rs  lib.rs  mog2.rs  optical_flow.rs  tracking.rs
videoio/: Cargo.toml
videoio/src/: lib.rs
videoio/tests/: native_io_tests.rs
(+720 files in other folders)
