[package]
name = "rust-cv-native"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Native Rust computer vision library with multi-backend acceleration"

[dependencies]
cv-core = { path = "./core" }
cv-hal = { path = "./hal" }
cv-imgproc = { path = "./imgproc" }
cv-features = { path = "./features" }
cv-stereo = { path = "./stereo" }
cv-video = { path = "./video" }
cv-3d = { path = "./3d" }
cv-calib3d = { path = "./calib3d" }
cv-sfm = { path = "./sfm" }
cv-slam = { path = "./slam" }
cv-runtime = { path = "./runtime" }
cv-optimize = { path = "./optimize" }
[dev-dependencies]
criterion = { workspace = true }
image = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
cv-3d = { path = "./3d" }
cv-scientific = { path = "./scientific" }
cv-point-cloud = { path = "./point-cloud" }
cv-core = { path = "./core" }
nalgebra = { workspace = true }
futures = { workspace = true }
wgpu = { workspace = true }
rand = { workspace = true }

[features]
default = []
gpu = ["cv-stereo/gpu", "cv-features/gpu"]
cubecl = ["cv-hal/cubecl"]
cuda = ["cv-hal/cuda"]

[[bench]]
name = "cv_benchmarks"
harness = false
path = "benches/cv_benchmarks.rs"

[[bench]]
name = "async_bridge"
harness = false
path = "benches/async_bridge.rs"

[[bench]]
name = "normals"
harness = false
path = "benches/normals.rs"

[[bench]]
name = "cubecl_vs_wgsl"
harness = false
path = "benches/cubecl_vs_wgsl.rs"
required-features = ["cubecl"]

[workspace]
resolver = "2"
members = [
    "hal",
    "core",
    "imgproc",
    "features",
    "stereo",
    "video",
    "videoio",
    "calib3d",
    "photo",
    "sfm",
    "slam",
    "runtime",
    "optimize",
    "scientific",
    "point-cloud",
    "python",
    "viewer",
    "io",
    "objdetect",
    "dnn",
    "3d", "rendering", "registration", "plot",
    "examples",
]

[workspace.dependencies]
rayon = "1.10"
nalgebra = "0.33"
image = "0.25"
wgpu = "28.0.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
wide = "0.7"
futures = "0.3.31"
thiserror = "2.0"
criterion = { version = "0.5", default-features = false, features = ["rayon", "cargo_bench_support", "async_tokio"] }
core_affinity = "0.8"
ndarray = "0.17"
tokio = "1.43"
ffmpeg-next = "7.1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
