[package]
name = "rust-cv-native"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Native Rust computer vision library with multi-backend acceleration"

[dependencies]
cv-core = { workspace = true }
cv-hal = { workspace = true }
cv-imgproc = { workspace = true }
cv-features = { workspace = true }
cv-stereo = { workspace = true }
cv-video = { workspace = true }
cv-3d = { workspace = true }
cv-calib3d = { workspace = true }
cv-sfm = { workspace = true }
cv-slam = { workspace = true }
cv-runtime = { workspace = true }
cv-optimize = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
image = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
cv-scientific = { workspace = true }
cv-point-cloud = { workspace = true }
nalgebra = { workspace = true }
futures = { workspace = true }
wgpu = { workspace = true }
rand = { workspace = true }
bytemuck = { workspace = true }

[features]
default = ["full-precision"]
gpu = ["cv-stereo/gpu", "cv-features/gpu"]
cubecl = ["cv-hal/cubecl"]
cuda = ["cv-hal/cuda"]
full-precision = ["cv-core/full-precision"]
half-precision = ["cv-core/half-precision"]
all-precision = ["cv-core/all-precision"]

[[bench]]
name = "cv_benchmarks"
harness = false
path = "benches/cv_benchmarks.rs"

[[bench]]
name = "async_bridge"
harness = false
path = "benches/async_bridge.rs"

[[bench]]
name = "normals"
harness = false
path = "benches/normals.rs"

[[bench]]
name = "cubecl_vs_wgpu"
harness = false
path = "benches/cubecl_vs_wgpu.rs"

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/hal",
    "crates/imgproc",
    "crates/features",
    "crates/stereo",
    "crates/video",
    "crates/videoio",
    "crates/calib3d",
    "crates/photo",
    "crates/sfm",
    "crates/slam",
    "crates/runtime",
    "crates/optimize",
    "crates/scientific",
    "crates/point-cloud",
    "crates/python",
    "crates/viewer",
    "crates/io",
    "crates/objdetect",
    "crates/dnn",
    "crates/3d",
    "crates/rendering",
    "crates/registration",
    "crates/plot",
    "crates/examples",
]

[workspace.dependencies]
# Shared External Dependencies
rayon = "1.11"
approx = "0.5.1"
half = "2.7.1"
nalgebra = "0.33.2"
image = "0.25.9"
wgpu = "28.0.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
wide = "0.7.33"
futures = "0.3.31"
thiserror = "2.0.18"
criterion = { version = "0.5", default-features = false, features = ["rayon", "cargo_bench_support", "async_tokio"] }
core_affinity = "0.8"
ndarray = "0.17.2"
tokio = "1.49.0"
ffmpeg-next = "7.1"
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.138"
pollster = "0.4.0"
rstar = "0.12.2"
num-traits = "0.2"
itertools = "0.14.0"
anyhow = "1.0.101"
log = "0.4.29"
tracing = "0.1.41"
libc = "0.2.169"
hashbrown = "0.16.1"
tempfile = "3.16.0"
num_cpus = "1.16.0"
parking_lot = "0.12.3"
dashmap = "6.1.0"
memmap2 = "0.9.5"
bincode = "1.3.3"
v4l = "0.14.0"
faer = "0.24.0"
geo = "0.28.0"
geo-buffer = "0.2.0"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
numpy = "0.21.0"
egui = "0.33.3"
eframe = { version = "0.33.3", features = ["wgpu"] }
glam = "0.29.3"
tract-onnx = "0.21.7"
rustfft = "6"

# Internal Workspace Crates
cv-core = { path = "./crates/core" }
cv-hal = { path = "./crates/hal" }
cv-imgproc = { path = "./crates/imgproc" }
cv-features = { path = "./crates/features" }
cv-stereo = { path = "./crates/stereo" }
cv-video = { path = "./crates/video" }
cv-3d = { path = "./crates/3d" }
cv-calib3d = { path = "./crates/calib3d" }
cv-sfm = { path = "./crates/sfm" }
cv-slam = { path = "./crates/slam" }
cv-runtime = { path = "./crates/runtime" }
cv-optimize = { path = "./crates/optimize" }
cv-scientific = { path = "./crates/scientific" }
cv-point-cloud = { path = "./crates/point-cloud" }
cv-videoio = { path = "./crates/videoio" }
cv-photo = { path = "./crates/photo" }
cv-io = { path = "./crates/io" }
cv-objdetect = { path = "./crates/objdetect" }
cv-dnn = { path = "./crates/dnn" }
cv-rendering = { path = "./crates/rendering" }
cv-registration = { path = "./crates/registration" }
cv-plot = { path = "./crates/plot" }
cv-viewer = { path = "./crates/viewer" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
