[package]
name = "cv-3d"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { workspace = true }
cv-core = { path = "../core" }
cv-runtime = { path = "../runtime" }
cv-hal = { path = "../hal" }
thiserror = { workspace = true }
rayon = { workspace = true }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rand = "0.8"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
