[package]
name = "cv-calib3d"
version = "0.1.0"
edition = "2021"
description = "Camera calibration and 3D reconstruction for Rust Computer Vision"

[dependencies]
cv-core = { path = "../core" }
cv-imgproc = { path = "../imgproc" }
nalgebra = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
