[package]
name = "cv-dnn"
version = "0.1.0"
edition = "2021"

[dependencies]
cv-core = { path = "../core" }
cv-hal = { path = "../hal" }
cv-runtime = { path = "../runtime" }
cv-imgproc = { path = "../imgproc" }
image = { workspace = true }
ort = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
ndarray = { workspace = true }
