[package]
name = "cv-features"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Feature detection and description algorithms"

[dependencies]
cv-core = { path = "../core" }
cv-imgproc = { path = "../imgproc" }
cv-hal = { path = "../hal" }
cv-runtime = { path = "../runtime" }
nalgebra = { workspace = true }
rayon = { workspace = true }
image = { workspace = true }

thiserror = "2.0"
rand = "0.8"
bytemuck = { version = "1.14", features = ["derive"] }

# Optional GPU support
wgpu = { workspace = true, optional = true }
pollster = { version = "0.3", optional = true }

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster"]

[dev-dependencies]
pollster = "0.3"
