[package]
name = "cv-features"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Feature detection and description algorithms"

[dependencies]
cv-core = { workspace = true }
cv-imgproc = { workspace = true }
cv-hal = { workspace = true }
cv-runtime = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }

# Optional GPU support
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster"]

[dev-dependencies]
pollster = { workspace = true }
