[package]
name = "cv-hal"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Hardware Abstraction Layer for multi-backend acceleration"

[dependencies]
cv-core = { path = "../core" }
rayon = { workspace = true }
nalgebra = { workspace = true }
wide = { workspace = true }

thiserror = "2.0"
wgpu = { workspace = true }
pollster = "0.4.0"
futures.workspace = true
bytemuck = { version = "1.25.0", features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
rstar = "0.12"
hashbrown = "0.16"
cubecl = { version = "0.9.0", optional = true, features = ["wgpu"] }
cubecl-wgpu = { version = "0.9.0", optional = true }
cubecl-cuda = { version = "0.9.0", optional = true }

[features]
default = []
cpu = []
simd = []
tensorrt = []
directml = []
webgpu = []
mlx = []
cubecl = ["dep:cubecl", "dep:cubecl-wgpu"]
cuda = ["cubecl", "dep:cubecl-cuda"]

[dev-dependencies]
serial_test = "3.4.0"
