[package]
name = "cv-hal"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Hardware Abstraction Layer for multi-backend acceleration"

[dependencies]
cv-core = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true }
wide = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
futures = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
rstar = { workspace = true }
hashbrown = { workspace = true }
cubecl = { version = "0.9.0", optional = true, features = ["wgpu"] }
cubecl-wgpu = { version = "0.9.0", optional = true }
cubecl-cuda = { version = "0.9.0", optional = true }

[dev-dependencies]
criterion = { workspace = true }
approx = { workspace = true }
image = { workspace = true }
cv-core = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
futures = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
serial_test = "3.4.0"

[features]
default = ["full-precision"]
cpu = []
simd = []
tensorrt = []
directml = []
webgpu = []
mlx = []
cubecl = ["dep:cubecl", "dep:cubecl-wgpu"]
cuda = ["cubecl", "dep:cubecl-cuda"]
full-precision = ["cv-core/full-precision"]
half-precision = ["cv-core/half-precision"]
all-precision = ["full-precision", "half-precision"]
