[package]
name = "cv-imgproc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Image processing algorithms with hardware acceleration"

[dependencies]
cv-core = { path = "../core" }
cv-hal = { path = "../hal" }
image = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true }
wide = { workspace = true }

thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
