[package]
name = "cv-io"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "3D file format I/O for point clouds and meshes (PLY, OBJ, STL, PCD)"

[dependencies]
cv-core = { path = "../core" }
cv-runtime = { path = "../runtime" }
cv-3d = { path = "../3d" }
nalgebra = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

[features]
default = []
