[package]
name = "cv-point-cloud"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unified point cloud operations crate"

[dependencies]
nalgebra = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
cv-core = { path = "../core" }
cv-scientific = { path = "../scientific" }
cv-3d = { path = "../3d" }

[dev-dependencies]
