[package]
name = "cv-registration"
version = "0.1.0"
edition = "2021"
description = "3D point cloud registration algorithms"
license = "MIT OR Apache-2.0"

[dependencies]
nalgebra = { workspace = true }
cv-core = { path = "../core" }
cv-hal = { path = "../hal" }
thiserror = { workspace = true }
rand = "0.8"
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []
