[package]
name = "cv-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = { workspace = true }
nalgebra = { workspace = true }
thiserror = { workspace = true }
cv-hal = { path = "../hal" }
cv-core = { path = "../core" }
core_affinity = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
num_cpus = "1.16"
wgpu = { version = "24.0.0" }
bytemuck = { workspace = true }
