[package]
name = "cv-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = { workspace = true }
nalgebra = { workspace = true }
thiserror = { workspace = true }
cv-hal = { path = "../hal" }
cv-core = { path = "../core" }
core_affinity = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread", "time", "net"] }
num_cpus = "1.16"
wgpu = { workspace = true }
bytemuck = { workspace = true }
parking_lot = "0.12"
dashmap = "6.0"
memmap2 = "0.9"
bincode = "1.3"
futures = { workspace = true }
tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
pollster = "0.3"
tempfile = "3.10"
