[package]
name = "cv-scientific"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { workspace = true }
cv-core = { path = "../core" }
thiserror = { workspace = true }
ndarray = { workspace = true }
geo = "0.28"
rstar = "0.12"
geo-buffer = "0.2"
ply-rs = "0.1.3"
rand = "0.10.0"
lru = "0.12"
rayon = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
