[package]
name = "cv-scientific"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { workspace = true }
cv-core = { path = "../core" }
ndarray = { workspace = true }
geo = "0.28"
rstar = "0.12"
geo-buffer = "0.2"
rayon = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
