[package]
name = "cv-stereo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Stereo vision and depth estimation algorithms"

[dependencies]
cv-core = { path = "../core" }
cv-imgproc = { path = "../imgproc" }
cv-calib3d = { path = "../calib3d" }
cv-hal = { path = "../hal" }
nalgebra = { workspace = true }
rayon = { workspace = true }
image = { workspace = true }

thiserror = "2.0"
wgpu = { workspace = true, optional = true }
bytemuck = { version = "1.16", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "calibration_benchmark"
harness = false

[features]
default = []
gpu = ["wgpu", "bytemuck", "tokio"]
