[package]
name = "cv-video"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Video processing and optical flow algorithms"

[dependencies]
cv-core = { path = "../core" }
cv-imgproc = { path = "../imgproc" }
cv-hal = { path = "../hal" }
nalgebra = { workspace = true }
rayon = { workspace = true }
image = { workspace = true }

thiserror = "2.0"
