[package]
name = "cv-videoio"
version = "0.1.0"
edition = "2021"
description = "Video input/output and camera capture for Rust Computer Vision"

[dependencies]
cv-core = { path = "../core" }
image = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
ffmpeg-next = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14" # Video4Linux2 wrapper
