[package]
name = "cv-calib3d"
version = "0.1.0"
edition = "2021"
description = "Camera calibration and 3D reconstruction for Rust Computer Vision"

[dependencies]
cv-core = { workspace = true }
cv-imgproc = { workspace = true }
cv-runtime = { workspace = true }
cv-hal = { workspace = true }
nalgebra = { workspace = true }
image = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rayon = { workspace = true }

[features]
default = []
