[package]
name = "cv-calib3d"
version = "0.1.0"
edition = "2021"
description = "Camera calibration and 3D reconstruction for Rust Computer Vision"

[dependencies]
cv-core = { workspace = true }
cv-imgproc = { workspace = true }
cv-runtime = { workspace = true }
cv-hal = { workspace = true }
nalgebra = { workspace = true }
image = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rayon = { workspace = true }
wide = { workspace = true }
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, features = ["derive"], optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "calibration_benchmark"
harness = false

[features]
default = []
gpu = ["wgpu", "bytemuck", "tokio"]
