[package]
name = "cv-io"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "3D file format I/O for point clouds and meshes (PLY, OBJ, STL, PCD)"

[dependencies]
cv-core = { workspace = true }
cv-3d = { workspace = true }
nalgebra = { workspace = true }

[features]
default = []
