[package]
name = "cv-point-cloud"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unified point cloud operations crate"

[dependencies]
cv-scientific = { workspace = true }
cv-3d = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
hashbrown = { workspace = true }

[features]
default = []
