[package]
name = "cv-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = { workspace = true }
nalgebra = { workspace = true }
thiserror = { workspace = true }
cv-hal = { workspace = true }
cv-core = { workspace = true }
core_affinity = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread", "time", "net"] }
num_cpus = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
memmap2 = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

[features]
default = []
tracing = ["dep:tracing"]

[target.'cfg(not(target_os = "linux"))'.dependencies]
libc = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
tempfile = { workspace = true }
