[package]
name = "cv-slam"
version = "0.1.0"
edition = "2021"

[dependencies]
cv-core = { workspace = true }
cv-features = { workspace = true }
cv-calib3d = { workspace = true }
cv-hal = { workspace = true }
cv-runtime = { workspace = true }
cv-optimize = { workspace = true }
nalgebra = { workspace = true }
image = { workspace = true }

[features]
default = []
